[package]
name = "twitter-advanced-blocker"
version = "0.1.0"
authors = ["itok01 <contact@itok01.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
serde = "1"
serde_json = "1"
mongodb = "0.9"
bson = "0.14"
egg-mode = "0.14.0-beta.1"
